[package]
name = "oxide_pinger"
version = "0.1.0"
authors = ["Tim Buchwaldt <tim@buchwaldt.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oping = "0.4.0"
prometheus = {version = "0.10.0", features= ["process"]}
prometheus_exporter = "0.7"
lazy_static = "1.4.0"
config = "0.10.1"
log = "0.4.0"
env_logger = "0.8.2"
notify = "^4.0.0"
ipnet = "2.3.0"
fastping-rs = { path = "../fastping-rs" }
